--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,9 @@ test {
 */
 test {
     useTestNG() {
-        suites "src/test/resources/Smoke.xml"
-        suites "src/test/resources/Regression.xml"
+       // suites "src/test/resources/Smoke.xml"
+       // suites "src/test/resources/Regression.xml"
+        suites "src/test/resources/homework18.xml"
 
     }
 }
