--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ test {
     useTestNG() {
        // suites "src/test/resources/Smoke.xml"
        // suites "src/test/resources/Regression.xml"
-        suites "src/test/resources/homework18.xml"
+        // suites "src/test/resources/homework18.xml"
+        suites "src/test/resources/TestNG.xml"
 
     }
 }
